--- a/code/2_descriptives.Rmd
+++ b/code/2_descriptives.Rmd
@@ -129,7 +129,6 @@ plot_a <- ggplot(a_data,
 
 plot_a 
 
-
 # --- Plot B: Proportion by Effort --- 
 b_data <- df_long |>
   group_by(ppn, effort, target) |>
@@ -137,13 +136,16 @@ b_data <- df_long |>
   group_by(effort, target) |>
   summarise(
     prop = mean(prop_per_ppn),
-    se = sd(prop_per_ppn) / sqrt(n()),
-    n = n(),
+    se   = sd(prop_per_ppn) / sqrt(n()),
+    n    = n(),
     .groups = "drop"
   )
 
-plot_b <- ggplot(b_data, aes(x = factor(effort), y = prop, fill = target)) +
+pd <- position_dodge(width = 0.75)
+
+plot_b <- ggplot(b_data, aes(x = effort, y = prop, fill = target)) +
   geom_col(position = pd, width = 0.7) +
+  
   geom_errorbar(aes(ymin = prop - se, ymax = prop + se),
                 position = pd, width = 0.2, linewidth = 0.6) +
   scale_fill_manual(
@@ -152,13 +154,17 @@ plot_b <- ggplot(b_data, aes(x = factor(effort), y = prop, fill = target)) +
                "prosocial" = "#4E79A7"),
     name = "Recipient"
   ) +
-  scale_y_continuous(labels = scales::percent(prop, accuracy = 1),
-                     limits = c(0, 1), expand = c(0, 0)) +
+  scale_y_continuous(
+    labels = scales::percent_format(accuracy = 1),
+    limits = c(0, 1),
+    expand = c(0, 0)
+  ) +
   labs(x = "Effort Level",
        y = "Proportion of High-Effort Choices") +
   theme_classic(base_size = 12) +
   theme(legend.position = "top",
         legend.title = element_blank())
+
 plot_b
 
 
@@ -177,7 +183,7 @@ c_data <- df_long |>
   )
 
 
-plot_c <- ggplot(c_data, aes(x = factor(reward), y = prop, fill = target)) +
+plot_c <- ggplot(c_data, aes(x = reward, y = prop, fill = target)) +
   geom_col(position = pd, width = 0.7) +
   geom_errorbar(aes(ymin = prop - se, ymax = prop + se),
                 position = pd, width = 0.2, linewidth = 0.6) +
@@ -187,9 +193,9 @@ plot_c <- ggplot(c_data, aes(x = factor(reward), y = prop, fill = target)) +
                "prosocial" = "#4E79A7"),
     name = "Recipient"
   ) +
-  scale_y_continuous(labels = scales::percent(prop, accuracy = 1),
+  scale_y_continuous(labels = scales::percent_format(accuracy = 1),
                      limits = c(0, 1), expand = c(0, 0)) +
-  labs(x = "Reward Level",
+  labs(x = "Reward",
        y = "Proportion of High-Effort Choices") +
   theme_classic(base_size = 12) +
   theme(legend.position = "top",
@@ -217,13 +223,13 @@ d_data <- df_long |>
   )
 
 plot_d <- ggplot(d_data, aes(x = reward, y = prop, 
-                                 color = effort, group = effort)) +
+                             color = effort, group = effort)) +
   geom_point(size = 3.5) +
   geom_line(linewidth = 1.1) +
   geom_errorbar(aes(ymin = prop - se, ymax = prop + se),
                 width = 0.15, linewidth = 0.9) +
   scale_color_tableau(palette = "Tableau 10", name = "Effort Level") +
-  scale_y_continuous(labels = scales::percent(prop, accuracy = 1), breaks = seq(0.5, 1, 0.1)) +
+  scale_y_continuous(labels = scales::percent_format(accuracy = 1), breaks = seq(0.5, 1, 0.1)) +
   coord_cartesian(ylim = c(0.5, 1)) +
   labs(
     x = "Reward", 
@@ -280,7 +286,7 @@ plot_e <- ggplot(e_data,
     )
   ) +
   scale_y_continuous(
-    labels = scales::percent(prop, accuracy = 1),
+    labels = scales::percent_format(accuracy = 1),
     limits = c(0.7, 1), 
     breaks = seq(0.7, 1, 0.05)
   ) +
@@ -328,7 +334,7 @@ plot_f <- ggplot(f_data,
     )
   ) +
   scale_y_continuous(
-    labels = scales::percent(prop, accuracy = 1),
+    labels = scales::percent_format(accuracy = 1),
     limits = c(0.7, 1),
     breaks = seq(0.7, 1, 0.05)
   ) +
@@ -365,6 +371,55 @@ p_main <- ggplot(choice_summary, aes(x = block, y = prop_high_effort,
 
 p_main
 
+# Interactions
+
+# 1) per-participant proportions
+summary_ppn <- df_long |> 
+  group_by(ppn, target, group, block) |> 
+  summarise(prop_per_ppn = mean(choice, na.rm = TRUE), .groups = "drop")
+
+# 2) group means ± SE
+summary_data <- summary_ppn |> 
+  group_by(target, group, block) |> 
+  summarise(
+    N  = n(),
+    M  = mean(prop_per_ppn, na.rm = TRUE),
+    SE = sd(prop_per_ppn, na.rm = TRUE) / sqrt(N),
+    .groups = "drop"
+  )
+
+pd <- position_dodge(width = 0.00)  # no horizontal dodging (lines connect same x)
+
+ggplot(summary_data,
+       aes(x = block, y = M, color = group, group = group)) + 
+
+  geom_line(linewidth = 1.1, position = pd) +
+  geom_point(size = 3, position = pd) +
+  facet_wrap(~ target, labeller = labeller(
+    target = c(self="Self", climate="Climate", prosocial="Prosocial")
+  )) +
+  scale_color_manual(
+    values = c("control" = "#4E79A7",
+               "positive_norm" = "#1B9E77",  # darker green for contrast
+               "negative_norm" = "#D95F02"),
+    labels = c("Control", "Positive Norm", "Negative Norm"),
+    name   = "Condition"
+  ) +
+  # zoom instead of clipping: keeps full error bars visible
+  scale_y_continuous(
+    labels = scales::percent_format(accuracy = 1),
+    limits = c(0, 1),
+    expand = expansion(mult = c(0, 0.02))
+  ) +
+  labs(x = "Block",
+       y = "Proportion of High-Effort Choices",
+       title = "Observed Interaction: Target × Group × Block") +
+  theme_minimal(base_size = 13) +
+  theme(
+    legend.position = "top",
+    legend.title = element_text(),
+    panel.grid.minor = element_blank()
+  )
 
 
 
