--- a/analysis/00_moderators.Rmd
+++ b/analysis/00_moderators.Rmd
@@ -176,10 +176,6 @@ for (c in classes) {
   class_data  = subset(edges, class == c)
   class_nodes = subset(nodes, class == c)
   
-  # Convert to numeric
-  class_data$target = as.numeric(class_data$target)
-  class_nodes$name = as.numeric(class_nodes$name)
-  
   # IDs mentioned but not present
   invalid_ids = setdiff(unique(class_data$target), unique(class_nodes$name))
   
@@ -377,4 +373,73 @@ saveRDS(
 
 ```
 
+
+Create a composite score by standardizing it, and afterwards converting it to a 0-100 scale.
+
+```{r}
+
+# Merge network metrics and class descriptives
+cohesion_data <- network_summary |> 
+  left_join(class_summary, by = "class")
+
+
+cohesion_data_std <- cohesion_data |> 
+  mutate(
+    # Standardise (z-scores): (x - mean) / sd
+    dens_z           = as.numeric(scale(density_directed)),
+    dens_recip_z     = as.numeric(scale(density_reciprocal)),
+    reciprocity_z    = as.numeric(scale(reciprocity)),
+    transitivity_z   = as.numeric(scale(transitivity)),
+    path_mean_z      = as.numeric(scale(path_length_mean)),
+    n_comp_z         = as.numeric(scale(n_components)),
+    largest_comp_z   = as.numeric(scale(largest_component_size)),
+    mean_nom_z       = as.numeric(scale(mean_nominations)),
+    
+    # flip the metrics for these - higher values should mean more cohesion
+    path_mean_coh    = -path_mean_z,   # shorter paths = better
+    n_comp_coh       = -n_comp_z       # fewer components = better
+  )
+
+cohesion_data_index <- cohesion_data_std |> 
+  mutate(
+    cohesion_index_z = rowMeans(
+      cbind(
+        dens_z,
+        dens_recip_z,
+        reciprocity_z,
+        transitivity_z,
+        path_mean_coh,
+        n_comp_coh,
+        largest_comp_z,
+        mean_nom_z
+      ),
+      na.rm = TRUE
+    )
+  )
+
+
+# Convert to 0-100 index
+
+cohesion_data_index <- cohesion_data_index |> 
+  mutate(
+    cohesion_index_01 = (cohesion_index_z - min(cohesion_index_z, na.rm = TRUE)) /
+      (max(cohesion_index_z, na.rm = TRUE) - min(cohesion_index_z, na.rm = TRUE)),
+    cohesion_index_100 = round(cohesion_index_01 * 100, 1)
+  )
+
+
+cohesion_data_index |> 
+  select(class,
+         density_directed,
+         reciprocity,
+         transitivity,
+         path_length_mean,
+         n_components,
+         largest_component_size,
+         mean_nominations,
+         cohesion_index_100) |> 
+  arrange(desc(cohesion_index_100))
+
+
+```
 
