--- a/analysis/04_statistical_modeling.Rmd
+++ b/analysis/04_statistical_modeling.Rmd
@@ -251,27 +251,52 @@ print(did_summary)
 
 ```{r}
 
-df_complete <- df_long[complete.cases(df_long), ]
+# 1. Simulate DHARMa residuals
 
-set.seed(123)
-res <- simulateResiduals(final_model, n=1000)
-plot(res)
-
-# DHARMa diagnostics 
-plot(res)
-testUniformity(res)
-testDispersion(res)       
-testOutliers(res)
-
-plotResiduals(res, df_complete$group)
-plotResiduals(res, df_complete$target)
- 
-print(VarCorr(final_model))
-print(performance::icc(final_model))
-print(performance::check_collinearity(final_model))
+sim <- simulateResiduals(
+  fittedModel = final_model,
+  n = 1000,
+  plot = FALSE
+)
 
 
+# 2. Main diagnostic plots
 
+plot(sim) # QQ + residuals vs fitted
+
+plotQQunif(sim)  # QQ only
+plotResiduals(sim) # residuals vs predicted only
+
+# 3. Global statistical tests
+
+testUniformity(sim)      # Should be non-significant
+testDispersion(sim)      # Should be non-significant
+testOutliers(sim)       # OK if significant for GLMMs, consider type="bootstrap" if significant
+
+# 4. Predictor-specific residual checks
+
+mf <- model.frame(final_model) # because of NA values 
+
+
+plotResiduals(sim, mf$target)
+plotResiduals(sim, mf$group)
+plotResiduals(sim, mf$block)
+plotResiduals(sim, mf$school)
+plotResiduals(sim, mf$reward)
+plotResiduals(sim, mf$effort)
+
+
+# 5. Grouped residuals (random-effects diagnostic)
+sim_ppn <- recalculateResiduals(sim, group = mf$ppn)
+plot(sim_ppn)
+testDispersion(sim_ppn)
+
+
+performance::icc(final_model)
+
+performance::r2(final_model)
+
+r2_nakagawa(final_model)
 
 ```
 
