--- a/analysis/00_moderators.Rmd
+++ b/analysis/00_moderators.Rmd
@@ -65,10 +65,10 @@ Also a good fit, might make sense to combine all of them together. The internal 
 ### EFA
 
 ```{r}
-fa.parallel(sus_scores[all_items], fa = "pc")
+fa.parallel(sus_scores[all_items], fa = "fa")
 ```
 
-Parallel analysis shows that using one factor is possible, though this contradicts theory.
+Parallel analysis shows that using two factors is better factor is possible.
 
 ### One factor
 
@@ -76,6 +76,7 @@ Parallel analysis shows that using one factor is possible, though this contradic
 efa_1_factor = fa(sus_scores[all_items], nfactors = 1, rotate = "oblimin")
 variance_explained1 = efa_1_factor$Vaccounted["Proportion Var", 1]
 efa_1_factor$loadings
+
 ```
 
 ### Two factors
@@ -276,7 +277,16 @@ for (cls in classes) {
   # Plot each network
   plot(
     g,
-    main = paste("Network for Class", cls),
+    main = paste("Directed Network for Class", cls),
+    edge.width = 0.5,
+    vertex.size = 15,
+    vertex.label.cex = 0.8,
+    layout = layout_with_fr
+  )
+  
+    plot(
+    g_recip,
+    main = paste("Reciprocal Network for Class", cls),
     edge.width = 0.5,
     vertex.size = 15,
     vertex.label.cex = 0.8,
@@ -287,6 +297,11 @@ for (cls in classes) {
 network_summary
 
 ```
+
+```{r}
+
+```
+
 
 ### Network descriptives
 
@@ -515,6 +530,12 @@ cohesion_data <- cohesion_data |>
 
 
 ```
+## Option 3: EFA
+```{r}
+fa.parallel(cohesion_vars, fa = "fa")
+```
+Paralell analysis indicates two factors, though the elbow is not very clear.
+Generally performing EFA on such a small dataset is not reliable.
 
 Save cohesion data
 
