--- a/analysis/02_descriptives.Rmd
+++ b/analysis/02_descriptives.Rmd
@@ -21,8 +21,6 @@ df_long <- readRDS(here::here("data","processed","df_long.rds"))
 ```{r}
 # Standard error
 
-se <- function(x) sd(x, na.rm = TRUE) / sqrt(sum(!is.na(x)))
-
 # Color palettes consistent across plots
 
 pal_target <- c(
@@ -36,6 +34,8 @@ pal_group <- c(
 "positive_norm" = "#59A14F",
 "negative_norm" = "#E15759"
 )
+
+
 
 pd <- position_dodge(width = 0.7)
 
@@ -141,197 +141,81 @@ choice_by_params <- df_long |>
 choice_by_params
 ```
 
-# 6) Bar Plots
-
-a) Proportion by Target
-
-```{r}
-
-a_data <- df_long |>
-  group_by(ppn, target) |>
-  summarise(prop_per_ppn = mean(choice, na.rm = TRUE), .groups = "drop") |>
-  group_by(target) |>
-  summarise(
-    prop = mean(prop_per_ppn),
-    se = se(prop_per_ppn),
-    n = n(),
-    .groups = "drop"
-  )
-
-
-plot_a <- ggplot(a_data,
-                 aes(x = reorder(target, -prop),
-                     y = prop,
-                     fill = target)) +
-  geom_bar(stat = "identity", width = 0.6) +
-  geom_errorbar(aes(ymin = prop - se, ymax = prop + se),
-                width = 0.15, linewidth = 0.8) +
-  geom_text(aes(label = scales::percent(prop, accuracy = 1)), 
-            vjust = -1, size = 4) +
-  scale_fill_manual(values = pal_target) +
-  scale_y_continuous(labels = scales::percent_format(accuracy = 1),
-                     limits = c(0, 1),
-                     expand = expansion(mult = c(0, 0.1))) +
-  labs(
-    x = "Recipient",
-    y = "Proportion of High-Effort Choices",
-    fill = "Social target"
-  ) +
-  theme_minimal(base_size = 12) +
-  theme(legend.position = "none",
-        panel.grid.major.x = element_blank())
-
-plot_a 
-
-
-
-```
-
-
-b) Proportion by Effort $\times$ Target
-
-```{r}
-
-b_data <- df_long |>
-  group_by(ppn, effort, target) |>
-  summarise(prop_per_ppn = mean(choice, na.rm = TRUE), .groups = "drop") |>
-  group_by(effort, target) |>
-  summarise(
-    prop = mean(prop_per_ppn),
-    se   = se(prop_per_ppn),
-    n    = n(),
-    .groups = "drop"
-  )
-
-pd2 <- position_dodge(width = 0.75)
-
-plot_b <- ggplot(b_data, aes(x = effort, y = prop, fill = target)) +
-  geom_col(position = pd2, width = 0.7) +
-  
-  geom_errorbar(aes(ymin = prop - se, ymax = prop + se),
-                position = pd2, width = 0.2, linewidth = 0.6) +
-  scale_fill_manual(values = pal_target) +
-  scale_y_continuous(
-    labels = scales::percent_format(accuracy = 1),
-    limits = c(0, 1),
-    expand = c(0, 0)
-  ) +
-  labs(x = "Effort Level",
-       y = "Proportion of High-Effort Choices") +
-  theme_classic(base_size = 12) +
-  theme(legend.position = "top",
-        legend.title = element_blank())
-
-plot_b
-
-
-```
-
-c) Proportion by Reward $\times$ Target
-
-```{r}
-c_data <- df_long |>
-  group_by(ppn, reward, target) |>
-  summarise(prop_per_ppn = mean(choice, na.rm = TRUE), .groups = "drop") |>
-  group_by(reward, target) |>
-  summarise(
-    prop = mean(prop_per_ppn),
-    se = se(prop_per_ppn),
-    n = n(),
-    .groups = "drop"
-  )
-
-
-plot_c <- ggplot(c_data, aes(x = reward, y = prop, fill = target)) +
-  geom_col(position = pd, width = 0.7) +
-  geom_errorbar(aes(ymin = prop - se, ymax = prop + se),
-                position = pd, width = 0.2, linewidth = 0.6) +
- scale_fill_manual(values = pal_target) +
-  scale_y_continuous(labels = scales::percent_format(accuracy = 1),
-                     limits = c(0, 1), expand = c(0, 0)) +
-  labs(x = "Reward",
-       y = "Proportion of High-Effort Choices") +
-  theme_classic(base_size = 12) +
-  theme(legend.position = "top",
-        legend.title = element_blank())
-plot_c
-
-
-
-
-
-```
-# 7) Line plots
+# Visualizations
 
 a) Reward $\times$ Effort interaction
 
 ```{r}
-d_data <- df_long |>
-group_by(ppn, reward, effort) |>
-summarise(prop_ppn = mean(choice, na.rm = TRUE), .groups = "drop") |>
-group_by(reward, effort) |>
-summarise(M = mean(prop_ppn), SE = se(prop_ppn), .groups = "drop")
 
-plot_d <- ggplot(d_data, aes(x = reward, y = M, color = effort, group = effort)) +
-geom_point(size = 3) +
-geom_line(linewidth = 1.1) +
-geom_errorbar(aes(ymin = M - SE, ymax = M + SE), width = 0.15) +
-scale_color_tableau(name = "Effort") +
-scale_y_continuous(labels = scales::percent_format()) +
-labs(x = "Reward", y = "High-Effort") +
-theme_minimal()
+plot_a_data <- df_long |> 
+  group_by(reward, effort) |> 
+  summarise(p = mean(choice == 1, na.rm = TRUE), .groups = "drop")
 
-plot_d
+
+reward_effort_plot <- reward_effort_summary |>
+  ggplot(aes(x = reward, y = p, color = effort, group = effort)) +
+  geom_point(size = 3) +
+  geom_line(size = 1) +
+  scale_color_manual(values = c(
+    "40%" = "#E15759",
+    "90%" = "#4E79A7"
+  )) +
+  labs(
+    x = "Reward",
+    y = "Proportion of High-Effort Choices",
+    color = "Effort"
+  ) +
+  theme_bw()
+
+
+
+ggsave("figures/descriptives/reward_effort_plot.png",  
+       plot = reward_effort_plot,
+       width = 7, height = 5, dpi = 300)
+
 
 ```
+
 
 b) Target $\times$ Block $\times$ Group
 
 ```{r}
-e_data <- summary_ppn |>
-  group_by(target, block, group) |>
-  summarise(M = mean(prop_per_ppn), SE = se(prop_per_ppn), .groups = "drop")
 
-plot_e <- ggplot(e_data, aes(x = block, y = M,
-                             color = group, group = group)) +
-  geom_line(linewidth = 1.3) +
+plot_b_data <- df_long |>
+  group_by(group, block, target) |>
+  summarise(
+    p_choice = mean(choice == 1, na.rm = TRUE),
+    n       = sum(!is.na(choice)),
+    .groups = "drop"
+  )
+
+
+target_block_group_plot <- ggplot(plot_b_data,
+       aes(x = block,
+           y = p_choice,
+           color = target,
+           group = target)) +
   geom_point(size = 3) +
-  geom_errorbar(aes(ymin = M - SE, ymax = M + SE), width = 0.1) +
-  facet_wrap(~ target) +
-  scale_color_manual(values = pal_group) +
-  scale_y_continuous(labels = scales::percent_format(), limits = c(0.7, 1)) +
-  labs(y = "High-Effort Choices") +
-  theme_minimal()
+  geom_line(size = 1) +
+  facet_wrap(~ group, labeller = labeller(group = group_labels)) +
+  labs(
+    x     = "Block",
+    y     = "Proportion of High-Effort Choices",
+    color = "Target"
+  ) +
+  scale_color_manual(values = pal_target) +
+  theme_bw() +
+  theme(
+    legend.position = "top",
+    legend.title    = element_blank()
+  )
 
-plot_e
+ggsave("figures/descriptives/target_block_group_plot.png",  
+       plot = target_block_group_plot,
+       width = 7, height = 5, dpi = 300)
 
 ```
 
-## Saving all plots
-
-
-```{r}
-
-ggsave("figures/descriptives/fig_a_target.png",  
-       plot = plot_a,
-       width = 7, height = 5, dpi = 300)
-
-ggsave("figures/descriptives/fig_b_effort_x_target.png", 
-       plot = plot_b,
-       width = 7, height = 5, dpi = 300)
-
-ggsave("figures/descriptives/fig_c_reward_x_target.png",  
-       plot = plot_c,
-       width = 7, height = 5, dpi = 300)
-
-ggsave("figures/descriptives/fig_d_reward_x_effort.png",  
-       plot = plot_d,
-       width = 7, height = 5, dpi = 300)
-
-ggsave("figures/descriptives/fig_e_target_x_block_x_group.png",     plot = plot_e,
-     width = 7, height = 5, dpi = 300)
-
-```
 
 
 
